# diff-cover-action

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  entrypoint.py  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-image.yml  ci.yml  integration-test.yml  release.yml
docs/: index.html
src/: annotations.py  badge.py  cli_builder.py  comment.py  git_setup.py  outputs.py  report_parser.py  runner.py
templates/: comment_coverage.md.j2  comment_quality.md.j2  step_summary.md.j2
tests/: conftest.py  test_annotations.py  test_badge.py  test_cli_builder.py  test_comment.py  test_git_setup.py  test_outputs.py  test_report_parser.py  test_runner.py
tests/fixtures/: empty_diff.json  sample_coverage.json  sample_quality.json
